ProjetCompil/Gencode/Test/fail/asm/simble-fail.ass
; ----------------------------------------------------------------------
; -----------                      Programme généré par JCasc-----------
; ----------------------------------------------------------------------
   ADDSP #0 
   HALT 
